# ihmc_atlas_ros

./: CMakeLists.txt  README.md  package.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
configurations/: AtlasBackAndLegGains.ini  AtlasHydraulicArmGains.ini  AtlasJointOffsets.ini  AtlasStandPrepSetPoints.ini  IHMCNetworkParameters.ini  IHMCNetworkParametersRobot.ini  demo01.yaml  drc_finals.yaml  remote_visualizer.yaml  robot.yaml
launch/: ihmc_atlas.launch  ihmc_atlas_remote_visualizer.launch  ihmc_atlas_robot.launch  ihmc_atlas_scs.launch  ihmc_atlas_scs_demo01.launch  ihmc_atlas_scs_finals.launch
launch/common/: ihmc_atlas_params_common.launch
msg/: JointAnglesPacketMessage.msg
rviz_configurations/: ihmc_sim.rviz
scripts/: ihmc_dist_update.py
urdf/: atlas_unplugged_v4_no_hands.urdf  atlas_unplugged_v4_no_hands_no_wry2.urdf  atlas_unplugged_v5_no_hands.urdf  atlas_v4.urdf
