<?xml version="1.0"?>
<package>
  <name>ihmc_models</name>
  <version>0.3.2</version>
  <description>The ihmc_models package contains robot descriptions</description>

  <maintainer email="bshrewsbury@ihmc.us">The People's Glorious Point of Contact</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://bitbucket.org/ihmcrobotics/ihmc_ros</url>

  <author email="bshrewsbury@ihmc.us">The People's Glorious Author</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
