<?xml version="1.0"?>
<package>
  <name>ihmc_atlas</name>
  <version>0.3.2</version>
  <description>The ihmc_atlas package allows for using the IHMC ROS API with the Boston Dynamics Atlas robot</description>

  <maintainer email="bshrewsbury@ihmc.us">The People's Glorious Point of Contact</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://bitbucket.org/ihmcrobotics/ihmc_ros</url>

  <author email="bshrewsbury@ihmc.us">The People's Glorious Author</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ihmc_ros_common</build_depend>
  <build_depend>ihmc_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>ihmc_ros_common</run_depend>

</package>
