<?xml version="1.0"?>
<package>
  <name>ihmc_atlas_ros</name>
  <version>0.7.8</version>
  <description>The ihmc_atlas_ros package allows for using the IHMC ROS API with the Boston Dynamics Atlas robot</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.org/ihmcrobotics/ihmc_atlas_ros</url>

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ihmc_ros_common</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>ihmc_ros_common</run_depend>
  <run_depend>ihmc_msgs</run_depend>

</package>
